fix scrollbar position

--- a/src/app/components/Board/Board.scss
+++ b/src/app/components/Board/Board.scss
@@ -113,6 +113,7 @@ $list-margin: 8px;
 	height: 100%;
 	overflow-y: auto;
 	overflow-x: hidden;
+	margin: 0 3px 0 3px;	
 }
 
 .cards {
